TEST_PROGRAMS/INVALID/09/blank_funccall.go
package blank_funccall

func main() {
    _()
}
